[Trivial] Add Sergiy test cases for the bridge.
  Failure tests added for bridge

Pull Request:
   Closes #